fixing white overflow on mobile landscape

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -39,6 +39,10 @@
     }
 }
 
+html,body{
+    overflow-x: hidden;
+}
+
 .App {
     background: #CDB1E0;
     background-image:
